--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-}
-
-ul li {
-  list-style-type: none;
+  width: 92vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
