--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-.App {
+.app {
   text-align: center;
   width: 92vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.App h1,
-.App h3 {
+.app h1,
+.app h3 {
   margin: 10px;
 }
 
-.App ul {
+.app ul {
   margin: 0;
   padding: 0;
 }
