--- a/src/CommentInput.css
+++ b/src/CommentInput.css
@@ -15,6 +15,11 @@ textarea {
   border-radius: 10px;
 }
 
+textarea:focus {
+  outline: none !important;
+  border-color: #26973e;
+}
+
 .comment-input-form button {
   margin: 4px;
   padding: 4px 12px;
